commit 4 - added in another model, created one-to-many relationship. added some data and more styling.

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,9 +6,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{% block title %}{% endblock %}Vinyl Collector</title>
+  <title>{% block title %}{% endblock %} | Vinyl Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
@@ -32,5 +33,13 @@
   <footer class="page-footer">
     <div class="right">All Rights Reserved, &copy; 2020 Vinyl Collector &nbsp;</div>
   </footer>
+
+  <script>
+    const selectElement = document.getElementById('id_rating');
+    M.FormSelect.init(selectElement);
+
+    const comment = document.getElementById("id_comment");
+    comment.className += "materialize-textarea";
+  </script>
 </body>
 </html>
