--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,5 +5,24 @@ Home
 {% endblock %}
 
 {% block content %}
-    <h1>Welcome to the Greatest Vinyl Collector App!</h1>
+    
+
+<!-- The video -->
+<video autoplay muted loop id="myVideo">
+  <source src="/static/videos/video (1).mp4" type="video/mp4">
+</video>
+
+    <div class="row">
+      <div class="col s12">
+        <h1 class="hero-header">a place to share and discuss music</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s12">
+        <h1 class="hero-link"><a class="hero-page-link" href="vinyls/">join the conversation</a></h1>
+      </div>
+    </div>
+
+
 {% endblock %}
