--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,22 +6,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{% block title %}{% endblock %} | Vinyl Collector</title>
+  <title>{% block title %}{% endblock %} | VinylCollector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-  <header class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper">
+  <header>
+    <nav class="custom-nav">
+      <div>
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;VinylCollector</a></li>
+          <li><a href="/" class="brand-logo left">&nbsp;</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/vinyls">All Vinyls</a></li>
+          {% comment %} <li><a class="nav-links" href="/">home</a></li> {% endcomment %}
+          <li><a class="nav-links" href="/vinyls/add_vinyl">+ new album</a></li>
+          {% comment %} <li><a class="nav-links" href="/about">About</a></li> {% endcomment %}
+          <li><a class="nav-links" href="/vinyls">view the collection</a></li>
         </ul>
       </div>
     </nav>
@@ -31,7 +33,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2020 Vinyl Collector &nbsp;</div>
+    <div class="center">All Rights Reserved, &copy; 2020 Vinyl Collector &nbsp;</div>
   </footer>
 
   <script>
