--- a/main_app/templates/vinyls/info.html
+++ b/main_app/templates/vinyls/info.html
@@ -16,17 +16,25 @@ Vinyl Info
         <p>Artist: {{ vinyl.artist }}</p>
         <p>Genre: {{ vinyl.genre }}</p>
         <p>Release Year: {{ vinyl.release_year }}</p>
+
+    </div>
+      <div class="card-action">
+            
+      <a href="{% url 'edit_vinyl' vinyl.id %}" class="btn-small">Edit</a>
+      <a href="{% url 'delete_vinyl' vinyl.id %}" class="btn-small red">Delete</a>
+            
       </div>
     </div>
 
-    <form action="{% url 'add_review' vinyl.id %}" method="post">
-    {% csrf_token %}
-    {{ review_form.as_p }}
+  <form action="{% url 'add_review' vinyl.id %}" method="post">
+      {% csrf_token %}
+      {{ review_form.as_p }}
     <input type="submit" class="btn" value="add your thoughts">
-    </form>
-  </div>
+  </form>
 
- 
+
+</div>
+
   <div class="row">
   {% for review in vinyl.review_set.all %}
       <div class="col s12 m5">
@@ -41,5 +49,55 @@ Vinyl Info
     {% endfor %}
   </div>
 
-{% endblock %}
+    <!-- moodboard -->
+    <hr>
+<div class="row">
+  <div class="col s6">
+    <h3>album moodboard</h3>
+    {% if vinyl.moods.count %}
+      {% for mood in vinyl.moods.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <h6>{{ mood.mood }}</h6> 
+              {% comment %} <p>best season to listen to this album: {{ mood.season }}</p> {% endcomment %}
+            </span>
+          </div>
+                    <div class="card-action">
+            <form action="{% url 'remove_mood' vinyl.id mood.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn red">remove</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>no vibes yet</h5>
+    {% endif %}
+  </div>
+  <!-- all other moods will come after this line -->
+    <div class="col s6">
+    <h3>add more moods</h3>
+    {% if moods.count %}
+      {% for mood in moods.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              <h6>{{ mood.mood }}</h6> 
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_mood' vinyl.id mood.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn">add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{vinyl.title}} already has plenty of moods!</h5>
+    {% endif %}
+  </div>
+</div>
 
+{% endblock %}
