--- a/main_app/templates/vinyls/info.html
+++ b/main_app/templates/vinyls/info.html
@@ -10,26 +10,24 @@ Vinyl Info
 
 <div class="row">
   <div class="col s6">
-    <div class="card">
-      <div class="card-content">
+    <div class="card vinyl-card">
+      <div class="card-content" id="card-content">
         <span class="card-title">{{ vinyl.title }}</span>
         <p>Artist: {{ vinyl.artist }}</p>
         <p>Genre: {{ vinyl.genre }}</p>
         <p>Release Year: {{ vinyl.release_year }}</p>
 
+           <div class='button-box'> 
+      <a href="{% url 'edit_vinyl' vinyl.id %}" class="waves-effect waves-light btn-small">Edit</a>
+      <a href="{% url 'delete_vinyl' vinyl.id %}" class="waves-effect waves-light btn-small pink darken-3">Delete</a>
+            </div>
     </div>
-      <div class="card-action">
-            
-      <a href="{% url 'edit_vinyl' vinyl.id %}" class="btn-small">Edit</a>
-      <a href="{% url 'delete_vinyl' vinyl.id %}" class="btn-small red">Delete</a>
-            
-      </div>
     </div>
 
-  <form action="{% url 'add_review' vinyl.id %}" method="post">
+  <form class='add-review-form' action="{% url 'add_review' vinyl.id %}" method="post">
       {% csrf_token %}
       {{ review_form.as_p }}
-    <input type="submit" class="btn" value="add your thoughts">
+    <input type="submit" id="thoughts" class="waves-effect waves-light btn-small" value="add your thoughts">
   </form>
 
 
@@ -38,10 +36,10 @@ Vinyl Info
   <div class="row">
   {% for review in vinyl.review_set.all %}
       <div class="col s12 m5">
-            <div class="card-panel teal">
+            <div class="card-panel">
         <span class="white-text">            
-            <h5>{{review.user}}, {{review.get_rating_display}}</h5>
-            <p>"{{review.comment}}"</p>
+            <h5 class="review-header">{{review.user}}, {{review.get_rating_display}}</h5>
+            <p class="review-comment">"{{review.comment}}"</p>
         </span>
         
       </div>
@@ -50,52 +48,39 @@ Vinyl Info
   </div>
 
     <!-- moodboard -->
-    <hr>
 <div class="row">
   <div class="col s6">
-    <h3>album moodboard</h3>
+    <h3 class="moodboard">album moodboard</h3>
     {% if vinyl.moods.count %}
       {% for mood in vinyl.moods.all %}
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">
-              <h6>{{ mood.mood }}</h6> 
-              {% comment %} <p>best season to listen to this album: {{ mood.season }}</p> {% endcomment %}
-            </span>
-          </div>
-                    <div class="card-action">
-            <form action="{% url 'remove_mood' vinyl.id mood.id %}" method="post">
+
+
+            <form class="remove-mood-form" action="{% url 'remove_mood' vinyl.id mood.id %}" method="post">
               {% csrf_token %}
-              <button type="submit" class="btn red">remove</button>
+              <button type="submit" class="btn moodbtns moodbtns2">{{ mood.mood }}</button>
             </form>
-          </div>
-        </div>
+
+
       {% endfor %}
     {% else %}
-      <h5>no vibes yet</h5>
+      <h5 class="empty-moodboard">no vibes yet</h5>
     {% endif %}
   </div>
+
+
+
   <!-- all other moods will come after this line -->
     <div class="col s6">
-    <h3>add more moods</h3>
+    <h3 class="moodboard">add more moods</h3>
     {% if moods.count %}
       {% for mood in moods.all %}
-        <div class="card">
-          <div class="card-content">
-            <span class="card-title">
-              <h6>{{ mood.mood }}</h6> 
-            </span>
-          </div>
-          <div class="card-action">
-            <form action="{% url 'assoc_mood' vinyl.id mood.id %}" method="post">
+            <form class="mood-form" id="mood-form" action="{% url 'assoc_mood' vinyl.id mood.id %}" method="post">
               {% csrf_token %}
-              <button type="submit" class="btn">add</button>
+              <button type="submit" class="btn moodbtns">{{ mood.mood }}</button>
             </form>
-          </div>
-        </div>
       {% endfor %}
     {% else %}
-      <h5>{{vinyl.title}} already has plenty of moods!</h5>
+      <h5 class="empty-moodboard">{{vinyl.title}} already has plenty of moods!</h5>
     {% endif %}
   </div>
 </div>
